# rag-portfolio

./: .gitignore  CONTEXT_CONTINUATION.md  LICENSE  PROJETO_RESUMO.md  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  test_queries.json
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/api/: admin.py  chat.py  health.py  routes.py
backend/app/core/: config.py  logging.py
backend/app/db/: models.py  session.py
backend/app/observability/: langfuse_client.py
backend/app/rag/: chunker.py  embedder.py  generator.py  ingest.py  prompts.py  retriever.py
backend/migrations/: 001_init.sql  002_add_users.sql
backend/scripts/: download_book.py  test_rag_system.py
backend/tests/: conftest.py
backend/tests/eval/: questions.json  run_eval.py
backend/tests/integration/: test_retrieval.py
backend/tests/unit/: test_chunker.py
frontend/: auth.ts  package-lock.json  package.json  proxy.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pending/: page.tsx
frontend/components/chat/: ChatWindow.tsx  MessageBubble.tsx  SourceCard.tsx
frontend/components/layout/: Header.tsx
frontend/hooks/: useChat.ts
frontend/lib/: api-client.ts
infra/: .env.example  Caddyfile  docker-compose.yml
